--- a/src/main/java/base/config/project.properties
+++ b/src/main/java/base/config/project.properties
@@ -1,1 +1,10 @@
 ﻿site.url=https://www.yandex.ru
+selenide.browser=Chrome
+selenide.headless=false
+selenide.holdBrowserOpen=false
+selenide.startMaximized=true
+selenide.recordScreenshots=true
+selenide.reportsFolder=./reports
+selenide.pageLoadStrategy=normal
+selenide.savePageSource=true
+selenide.timeout=8000
