--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <aspectj.version>1.8.10</aspectj.version>
         <selenium-java.version>3.14.0</selenium-java.version>
         <testng.version>6.14.3</testng.version>
-        <selenide.version>4.12.3</selenide.version>
+        <selenide.version>5.1.0</selenide.version>
         <allure-testng.version>1.5.4</allure-testng.version>
         <allure-maven.version>2.8</allure-maven.version>
         <allure-maven.reportVersion>2.3.1</allure-maven.reportVersion>
@@ -48,6 +48,14 @@
             <artifactId>rest-assured</artifactId>
             <version>4.0.0</version>
             <scope>test</scope>
+        </dependency>
+
+        <!--Selenide-->
+        <dependency>
+            <groupId>com.codeborne</groupId>
+            <artifactId>selenide</artifactId>
+            <version>${selenide.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
